added new partner logos, more content, and learn more links and fixed styling

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ rel="stylesheet">
             <img src="images/design_border.png" alt="Border Design">
           </div>
           <h3>Healthcare Solutions</h3>
-          <p>Healthcare and Life Sciences clients are focusing a lot of attention on reducing costs and lorum ipsum efficiencies and automation. But simply adding technology is not enough. </p>
+          <p>Agilant Solutions has a dedicated healthcare practice focused only on providing transformational solutions to healthcare providers  and life sciences markets. <br/><span><a href="#">Learn More...</a></span></p>
         </div>
         <div class="grid-33 solution-box">
           <div class="solutionIcon">
@@ -116,7 +116,7 @@ rel="stylesheet">
             <img src="images/design_border.png" alt="Border Design">
           </div>
           <h3>Cloud Services</h3>
-          <p>Agilant helps you understand all aspects of the cloud models, facilitate your progression from traditional models to fast track cloud implementations with packaged solutions.  </p>
+          <p>Agilant helps you understand all aspects of the cloud models, facilitate your progression from traditional models to fast track cloud implementations with packaged solutions. <br/><span><a href="#">Learn More...</a></span></p>
         </div>
         <div class="grid-33 solution-box">
           <div class="solutionIcon">
@@ -126,7 +126,7 @@ rel="stylesheet">
             <img src="images/design_border.png" alt="Border Design">
           </div>
           <h3>Security Services</h3>
-          <p>Today's threat landscape is constantly changing. Agilant's security practice is there to prepare customers, protect them and respond effectively.</p>
+          <p>Today's threat landscape is constantly changing. Our comprehensive portfolio of security consulting and managed security solutions allows our customers to protect their most valued assets from real world dangers in addition to maintaining compliance adherence to regulatory requirements. <br/><span><a href="#">Learn More...</a></span></p>
         </div>
         <div class="clear"></div>
         <br/>
@@ -138,7 +138,7 @@ rel="stylesheet">
             <img src="images/design_border.png" alt="Border Design">
           </div>
           <h3>Managed IT Services</h3>
-          <p>Agilant managed print solutions to reduce operating costs, improve productivity, increase security and transform workflows.</p>
+          <p>Agilant managed print solutions to reduce operating costs, improve productivity, increase security and transform workflows. <br/><span><a href="#">Learn More...</a></span></p>
         </div>
         <div class="grid-33 solution-box">
           <div class="solutionIcon">
@@ -148,7 +148,7 @@ rel="stylesheet">
             <img src="images/design_border.png" alt="Border Design">
           </div>
           <h3>Professional Services</h3>
-          <p>Managing data is major challenge. The growth of email volumes, and unstructured file data has been exponential. Energy costs and financial can weigh heavily on an organization and affect overall performance.</p>
+          <p>Managing data is major challenge. The growth of email volumes, and unstructured file data has been exponential. Energy costs and financial can weigh heavily on an organization and affect overall performance. <br/><span><a href="#">Learn More...</a></span></p>
         </div>
         <div class="grid-33 solution-box">
           <div class="solutionIcon">
@@ -158,7 +158,7 @@ rel="stylesheet">
             <img src="images/design_border.png" alt="Border Design">
           </div>
           <h3>Infrastructure Services</h3>
-          <p>Through collaborative, long-term relationships, we assist the leading real estate firms of all sizes and geographically makeup to achieve and sustain measurable results built on a solid IT foundation.</p>
+          <p>Through collaborative, long-term relationships, we assist the leading real estate firms of all sizes and geographically makeup to achieve and sustain measurable results built on a solid IT foundation. <br/><span><a href="#">Learn More...</a></span></p>
         </div>
       </div><!-- //.container-->
     </section>
@@ -176,7 +176,7 @@ rel="stylesheet">
             <img src="images/design_border.png" alt="Border Design">
           </div>
           <h3>Life Sciences</h3>
-          <p>Lorem ipsum dolor sit amet, consectet ur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>This practice is staffed by healthcare professionals each with an average market tenure of over 20 years experienced in Medical Devices, EMR, PACS, Clinical Workflow, and compliance and Security. Practice Services include HealthCare Advisory & Strategic planning, EHR services including System Selection, Clinical Data Migration, Clinical application strategy and workflow optimization and Data Center strategy for Merger & Acquisition activity as well as traditional Technology IT & Security Consulting services. <br/><span><a href="#">Learn More...</a></span></p>
         </div>
         <div class="grid-33 vertical-box">
           <div class="verticalIcon">
@@ -186,7 +186,7 @@ rel="stylesheet">
             <img src="images/design_border.png" alt="Border Design">
           </div>
           <h3>Education</h3>
-          <p>Lorem ipsum dolor sit amet, consectet ur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Agilant Consulting has over two decades of experience with  Education technology and Unified Communication projects across US. In the Education sector, we’re focused on outcomes and ensure that our technology recommendations are based on education best-practice, the institute’s budgetary restrictions, project timeframe, and any functional requirements. <br/><span><a href="#">Learn More...</a></span></p>
         </div>
         <div class="grid-33 vertical-box">
           <div class="verticalIcon">
@@ -196,7 +196,7 @@ rel="stylesheet">
             <img src="images/design_border.png" alt="Border Design">
           </div>
           <h3>Government</h3>
-          <p>Lorem ipsum dolor sit amet, consectet ur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Lorem ipsum dolor sit amet, consectet ur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br/><span><a href="#">Learn More...</a></span></p>
         </div>
         <div class="clear"></div>
         <br/>
@@ -207,8 +207,8 @@ rel="stylesheet">
           <div class="design_border">
             <img src="images/design_border.png" alt="Border Design">
           </div>
-          <h3>Finances</h3>
-          <p>Lorem ipsum dolor sit amet, consectet ur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <h3>Finance</h3>
+          <p>Lorem ipsum dolor sit amet, consectet ur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br/><span><a href="#">Learn More...</a></span></p>
         </div>
         <div class="grid-33 vertical-box">
           <div class="verticalIcon">
@@ -218,17 +218,16 @@ rel="stylesheet">
             <img src="images/design_border.png" alt="Border Design">
           </div>
           <h3>SMB</h3>
-          <p>Lorem ipsum dolor sit amet, consectet ur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Small businesses are the foundation and driving force of entrepreneurial spirit in the U.S. economy. But Agilant knows that this market is underserved, since companies struggle with how to market to small businesses. Are they an individual consumer or an enterprise-level business? Neither! Agilant Solutions is focused on providing Small-Medium size businesses with exactly the services they need; by taking innovative, enterprise-level solutions and customizing them to fit the SMB environment and structure. We make sure that small businesses have the same technology and resources that, in the past, were only available to large corporations.
+          <br/>
+          <ul>
+            <li><a href="#">SMB IT Services</a></li>
+            <li><a href="#">On-site Tech Services</a></li>
+          </ul>
+        </p>
         </div>
         <div class="grid-33 vertical-box">
-          <div class="verticalIcon">
-            <img src="images/cloud.png" alt="Other Icon">
-          </div>
-          <div class="design_border">
-            <img src="images/design_border.png" alt="Border Design">
-          </div>
-          <h3>Lorem Ipsum</h3>
-          <p>Lorem ipsum dolor sit amet, consectet ur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          &nbsp;
         </div>
       </div><!-- //.container-->
     </section>
@@ -284,7 +283,7 @@ rel="stylesheet">
         <h2>Our Partners</h2>
       </div>
       <!-- Amazon -->
-      <div class="grid-20 partner_logo">
+      <div class="grid-20 partner_logo amazon_enterprise">
         <img src="images/partners/amazon_logo.png" alt="AWS Logo">
       </div>
       <!-- Azure -->
@@ -303,6 +302,7 @@ rel="stylesheet">
       <div class="grid-20 partner_logo riverbed">
         <img src="images/partners/riverbed_logo.png" alt="Riverbed Logo">
       </div>
+      <div class="clear"></div>
       <!-- HPE -->
       <div class="grid-20 partner_logo">
         <img src="images/partners/hp_enterprise_logo.png" alt="HP Enterprise Logo">
@@ -323,6 +323,7 @@ rel="stylesheet">
       <div class="grid-20 partner_logo">
         <img src="images/partners/emc_logo.png" alt="EMC Logo">
       </div>
+      <div class="clear"></div>
       <!-- Arista -->
       <div class="grid-20 partner_logo">
         <img src="images/partners/arista_logo.png" alt="Arista Logo">
@@ -343,6 +344,7 @@ rel="stylesheet">
       <div class="grid-20 partner_logo">
         <img src="images/partners/cohesity_logo.png" alt="Cohesity Logo">
       </div>
+      <div class="clear"></div>
       <!-- Palo Alto -->
       <div class="grid-20 partner_logo">
         <img src="images/partners/paloalto_logo.png" alt="Palo Alto Networks Logo">
@@ -363,6 +365,7 @@ rel="stylesheet">
       <div class="grid-20 partner_logo">
         <img src="images/partners/redhat_logo.png" alt="RedHat Logo">
       </div>
+      <div class="clear"></div>
       <!-- Veeam -->
       <div class="grid-20 partner_logo">
         <img src="images/partners/veeam_logo.png" alt="Veeam Logo">
